cmake_minimum_required(VERSION 3.24)
project(binary_trees C)

set(CMAKE_C_STANDARD 11)

add_executable(0-binary_tree_node
        0-main.c
        binary_trees.h
        binary_tree_print.c
        0-binary_tree_node.c
        )
add_executable(1-binary_tree_insert_left
        1-main.c
        1-binary_tree_insert_left.c
        0-binary_tree_node.c
        binary_tree_print.c
        )
add_executable(2-binary_tree_insert_right
        2-main.c
        2-binary_tree_insert_right.c
        0-binary_tree_node.c
        binary_tree_print.c
        )
add_executable( 3-binary_tree_delete
        3-main.c
        3-binary_tree_delete.c
        0-binary_tree_node.c
        2-binary_tree_insert_right.c
        binary_tree_print.c
        )
add_executable(4-binary_tree_is_leaf
        4-binary_tree_is_leaf.c
        0-binary_tree_node.c
        2-binary_tree_insert_right.c
        binary_tree_print.c
        4-main.c
        )
add_executable(5-binary_tree_is_root
        0-binary_tree_node.c
        2-binary_tree_insert_right.c
        binary_tree_print.c
        5-main.c
        5-binary_tree_is_root.c
        )
add_executable(6-binary_tree_preorder
        6-main.c
        6-binary_tree_preorder.c
        0-binary_tree_node.c
        binary_tree_print.c
        )
add_executable(7-binary_tree_inorder
        7-main.c
        7-binary_tree_inorder.c
        0-binary_tree_node.c
        binary_tree_print.c
        )
add_executable(8-binary_tree_postorder
        8-main.c
        8-binary_tree_postorder.c
        0-binary_tree_node.c
        binary_tree_print.c
        )
add_executable(9-binary_tree_height
        9-binary_tree_height.c
        0-binary_tree_node.c
        2-binary_tree_insert_right.c
        binary_tree_print.c
        9-main.c
        )
add_executable(10-binary_tree_depth
        10-binary_tree_depth.c
        10-main.c
        0-binary_tree_node.c
        2-binary_tree_insert_right.c
        binary_tree_print.c
        )
